finally fixed the white space / overflow issue without messing up header sticky attribute

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ html {
 .App {
     background-color: var(--light-bg);
     /* hide the large white space at the bottom of safari */
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
+    contain: paint;
 }
 
 .App[data-theme="dark"] {
